frontend/static/css/yourworld.css
* {
	margin: 0;
	padding: 0;
}
html, body {
	overflow: hidden;
	width: 100%;
	height: 100%;
	overscroll-behavior: contain;
	touch-action: pan-down;
}
.announce_text {
	text-align: center;
	margin-right: 3px;
}
.screen_canvas {
	overflow: hidden;
}
body {
	background: #ccc;
}
img {
	border: 0;
	text-decoration: none;
}
a,
a:link,
a:hover,
a:active,
a:visited {
	text-decoration: none;
	color: inherit;
}
#topbar {
	position: absolute;
	top: 0;
	width: 100%;
}
#topbar_inner {
	width: 100%;
	position: absolute;
}
#announce_container {
	text-align: center;
}
.announce_close {
	font-size: 11px;
	font-weight: bold;
	color: #636060;
	background-color: #C5C2C2;
	border-radius: 2px;
	padding: 0 3px;
}
.announce_close:hover {
	background: #928E8E;
	color: white;
	cursor: pointer;
}
.ui {
	color: #888;
	font-family: Verdana;
	font-size: 12px;
	z-index: 100;
}
.ui-vis {
	background-color: rgba(0, 0, 255, .1);
	padding: 2px;
}
.tab {
	padding-top: 0;
	top: 0px;
	position: absolute;
}
.message {
	margin-left: auto;
	margin-right: auto;
	padding: 5px 0px;
	width: 60%;
	text-align: center;
	background: #E5E5FF;
	color: #333;
}
.message a {
	color: blue;
}
#loading {
	font-family: Verdana;
}
#coords {
	position: absolute;
	bottom: 0;
	right: 0;
	color: #555;
	background: #E5E5FF;
	cursor: pointer;
}
.menu {
	right: 0;
}
#menu {
	cursor: pointer;
}
#menu.hover {
	color: #555;
	background: #E5E5FF;
	border-left: 1px solid #ccc;
}
#nav {
	position: absolute;
	text-align: right;
	top: 1.5em;
	background: #E5E5FF;
	width: 8em;
	color: #555;
	border-left: 1px solid #ccc;
	border-bottom: 1px solid #ccc;
	overflow: hidden;
	max-height: 100%;
}
#nav li {
	display: block;
	list-style: none;
	position: relative;
	cursor: pointer;
	border-top: 1px solid #ccc;
}
#nav li:first-child {
	border-top: 0;
}
#nav a {
	display: block;
}
* html #nav ul {
	line-height: 0;
}
#nav li.hover {
	background-color: white;
}
#goto_submit {
	margin-left: 1em;
	margin-top: 3px;
}
#protect_precision {
	position: absolute;
	left: 0px;
	top: 30px;
	background-color: #626262;
	color: white;
	padding: 4px;
}
#protect_selection {
	display: block;
	text-decoration: underline;
	color: white;
	text-align: center;
	cursor: pointer;
}
#protect_selection:hover {
	color: #F3DB65;
}
#protect_selection:active {
	color: #917c17;
}
#char_choice {
	margin-left: 14px;
}
.protect_button {
	border: solid 1px white;
	text-align: center;
	cursor: pointer;
	min-width: 40px;
	display: inline-block;
}
.auto_prog_panel {
	position: absolute;
	left: 0px;
	top: 100px;
	width: 150px;
	height: 30px;
	background-color: rgb(104, 104, 104);
	text-align: center;
	color: white;
}
#chat_open {
	position: absolute;
	bottom: 0px;
	left: 0px;
	width: 70px;
	text-align: center;
	background-color: #003399;
	color: white;
	height: 20px;
	border-style: solid;
	border-width: 1px;
	border-color: #000033;
	cursor: default;
}
#chat_open:hover {
	background-color: #2763dc;
}
#chat_open:active {
	background-color: #0e2961;
}
#usr_online {
	padding-left: 16px;
	display: inline-block;
}
#chatsend {
	padding: 1px 6px 1px 6px;
}
.chat_tab_button {
	height: 20px;
	border: solid 1px black;
	text-align: center;
	font-family: Verdana;
	font-size: 13px;
	cursor: default;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	margin-right: 3px;
}
.chat_tab_selected {
	background-color: #8C8C8C;
	color: white;
}
#chat_page_tab {
	width: 100px;
}
#chat_global_tab {
	width: 80px;
}
.chatfield {
	border: solid 1px black;
	background-color: white;
	overflow: scroll;
	overflow-x: hidden;
	overflow-wrap: break-word;
	margin: 3px;
	margin-bottom: 0px;
	height: 100%;
	padding: 2px;
}
.unread_bar {
	background-color: red;
	width: 100%;
	height: 2px;
	margin-top: 6px;
	margin-bottom: 6px;
	text-align: center;
}
.unread_bar_msg {
	background-color: white;
	position: relative;
	top: -8px;
	padding-left: 3px;
	padding-right: 3px;
	font-family: Verdana;
	font-size: 0.7em;
	color: red;
}
.unread {
	color: red;
	font-size: 11px;
}
#total_unread {
	font-size: 15px;
}
#chat_window {
	position: absolute;
	background-color: #e0e0e0;
	border: solid 1px black;
	display: flex;
	flex-flow: column;
}
#chat_close {
	background-color: red;
	width: 20px;
	height: 20px;
	text-align: center;
	color: white;
	border: solid 1px black;
	font-family: monospace;
	font-size: 16px;
	cursor: default;
	float: right;
}
#confirm_js {
	width: 441px;
	height: 256px;
	position: absolute;
	background-color: #dbdbdb;
	border-width: 2px;
	border-style: solid;
	border-color: black;
}
#confirm_js_code {
	background-color: #e6e6e6;
	position: absolute;
	width: 365px;
	height: 110px;
	top: 90px;
	left: 35px;
	padding: 3px;
	font-family: "Courier New", monospace;
	word-wrap: break-word;
	word-break: break-all;
	overflow: scroll;
	overflow-x: hidden;
}
#confirm_js_cancel {
	position: absolute;
	font-family: Helvetica;
	background-color: green;
	border-style: solid;
	width: 80px;
	height: 17px;
	top: 220px;
	left: 340px;
	border-width: 1px;
	padding: 2px;
	text-align: center;
	font-size: 15px;
	color: white;
	border-color: black;
	cursor: pointer;
}
#confirm_js_cancel_x {
	background-color: red;
	width: 20px;
	height: 20px;
	position: absolute;
	right: 3px;
	top: 2px;
	text-align: center;
	color: white;
	font-family: monospace;
	font-size: 16px;
	border-style: solid;
	border-width: 1px;
	border-color: black;
	cursor: pointer;
}
#confirm_js_msg {
	text-align: center;
	position: absolute;
	left: 20px;
	font-family: verdana;
	top: 40px;
}
#confirm_js_cancel:hover {
	background-color: #00AE00;
}
#run_js_confirm {
	position: absolute;
	color: blue;
	text-decoration: underline;
	top: 220px;
	left: 20px;
}
.region_selection {
	position: absolute;
	border: 1px solid black;
	pointer-events: none;
}
#area_results {
	width: 100%;
	height: 200px;
	white-space: pre;
	overflow: auto;
	overflow-x: scroll;
}
#link_element {
	position: absolute;
	display: block;
}
#owot {
	background-image: url("/static/unloaded.png");
	background-repeat: repeat;
}
#owot.nightmode {
	background-image: url("/static/unloaded_night.png");
}
#zoombar {
	width: 100%;
}
.color_btn {
	background-color: black;
	width: 16px;
	height: 16px;
	border-radius: 4px;
	border: solid 1px black;
	display: inline-block;
	font-weight: bold;
	font-family: verdana;
	text-align: center;
	cursor: default;
	font-size: 0.8em;
	overflow: hidden;
	margin: 3px;
	user-select: none;
	vertical-align: top;
}
.color_btn:hover {
	border-color: orange;
}
.color_btn:active {
	border-color: rgb(165, 107, 0);
}
.modal_corner_checkbox_label {
	margin-left: 5px;
	user-select: none;
}
#modal_overlay {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	cursor: default;
	background-color: rgba(0, 0, 0, 0.5);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 1000;
}
.modal_close {
	position: absolute;
	right: 0px;
	bottom: 0px;
	margin-right: 8px;
	margin-bottom: 8px;
	color: blue;
	text-decoration: underline;
	cursor: pointer
}
.modal_frame {
	background-color: #C3C3FF;
}
.modal_client {
	background-color: #E5E5FF;
}

